# CFM-shared-knowledge-base

./: .gitignore  README.md  config.yaml  espo_api_client.py  glossary.json  markdown_utils.py  publish_kb.py  pyproject.toml  translate.py
.github/: dependabot.yml
.github/workflows/: publish-kb.yml
articles/: getting-started.md
articles/English/: data-responsibility.md  reports-and-dashboards.md  roles-and-permissions.md  sensitive-feedback.md  test-article.md
articles/Español/: data-responsibility.md  reports-and-dashboards.md  roles-and-permissions.md  sensitive-feedback.md  test-article.md
articles/Français/: data-responsibility.md  reports-and-dashboards.md  roles-and-permissions.md  sensitive-feedback.md  test-article.md
articles/العربية/: data-responsibility.md  reports-and-dashboards.md  roles-and-permissions.md  sensitive-feedback.md  test-article.md
src/cfm_kb/: __init__.py  cli.py  data_types.py  espo_api_client.py  glossary.py  markdown_utils.py  publish_kb.py  translate.py  utils.py
tests/unit/: test_glossary.py  test_markdown_utils.py  test_translate.py
