[project]
name = "cfm-shared-knowledge-base"
version = "0.1.0"
description = "Publish Knowledge Base articles to EspoCRM from Markdown files."
requires-python = ">=3.12"
dependencies = [
    "markdown",
    "mdx-truly-sane-lists>=1.3",
    "openai",
    "python-dotenv",
    "requests",
    "tqdm",
]
